2.3.0
- fixed a bug in ./tests/CMakeLists.txt that prevented exception_tests to be run (#121)
- activate soanrcloud checks (#120)
2.2.4
- explain how GCOV and LCOV can be used to get coverage information (#116)
- setup codecov (https://codecov.io/gh/HerbertKoelman/cpp-logger/) reporting (#117)
- Fixed bugs #118
2.2.3:
- setup caveralls.io repoprting (#114 -> this doesn't work it's too buggy)
- added GCOV option (#115)
2.2.2:
- Added a contribution guide (#107)
- Limit to master and develop (#104)
- Activate travis-ci CI (#103)
- fixed bugs #109, #105
2.2.1:
- fix CppCheck and clang-tydy issues (#101,#102)
2.2.0
- you can find sample that shows how you can write your own logger sinks in tests/sink_tests.cpp (#95)
- in CMake we use target_compile_features() to set compiler related language standard options, for now we rely on C++17 (#98)
- now syslog::facility class is declared constexpr, no more facility maps or factory method (#97)
- replace #define with constexpr (#86)
- use std::atomic wherever possible (#96)
- logger::registry factory is no longer relying on a specific contructor signature (#94)
- update README with some performance feedback (#92)
- Reuse already created syslog::facilities(#81)
- file, stderr and stdout sinks are no longer using facilities (#78)
- Fixed bugs: #82, #85, #84, #91
2.1.0
- Fixed bugs : #77, #76, #73, #79, #80
2.0.0
- revisited the facility notion which was too specific (#41)
- use only english (#55)
- definition and types where not displayed in doxygen (#42)
- rename GTestConfig.cmake into GTestExt.cmake (#46)
- performance test are trough GoogleTests(#51)
- now gogle test comes as an external CMake project (#43)
- memset issue (#40)
- use CMake build system (#37)
- replace cpp-pthread features by standard C++17 ones (#38)
- Fixed bugs #56, #57, #71, #44
